WIP try doing transition animations on different elements. Really need to figure out how to get destroy/exit to work

--- a/static/styles/transitions.css
+++ b/static/styles/transitions.css
@@ -36,3 +36,33 @@
 .todo-exited {
     opacity: 0;
 }
+
+.todo-header-appear {
+    max-height: 0;
+    overflow: hidden;
+}
+
+.todo-header-appearing {
+    max-height: 200px;
+    transition: max-height 600ms ease-in;
+}
+
+.todo-header-appeared {
+    max-height: none;
+    overflow: initial;
+}
+
+.todo-header-enter {
+    max-height: 0;
+    overflow: hidden;
+}
+
+.todo-header-entering {
+    max-height: 200px;
+    transition: max-height 600ms ease-in;
+}
+
+.todo-header-entered {
+    max-height: none;
+    overflow: initial;
+}
